fixed navbar on mobile + footer subscribe button

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,7 +38,7 @@
     position: fixed;
     top: 0;
     right: -100%;
-    height: 20vh;
+    height: 30vh;
     width: 50%;
     background: #ffffff;
     display: flex;
@@ -716,7 +716,6 @@
   flex: 1;
   border: none;
   outline: none;
-  padding: 0.5rem 0;
   font-size: 0.875rem;
   color: #9F9F9F;
   font-weight: 400;
@@ -726,7 +725,6 @@
   cursor: pointer;
   font-weight: 500;
   font-size: 0.875rem;
-  padding: 0.5rem 0;
   border: none;
   border-bottom: 1px solid black;
   display: inline-block;
