--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -66,7 +66,6 @@
               flex: 1;
               border: none;
               outline: none;
-              padding: 0.5rem 0;
               font-size: 0.875rem;
               color: $gray;
               font-weight: 400;
@@ -77,7 +76,6 @@
             cursor: pointer;
             font-weight: 500;
             font-size: 0.875rem;
-            padding: 0.5rem 0;
             border: none;
             border-bottom: 1px solid black;
             display: inline-block;
