--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -29,7 +29,7 @@
           position: fixed;
           top: 0;
           right: -100%;
-          height: 20vh;
+          height: 30vh;
           width: 50%;
           background: $white;
           @include flex-center(flex-start, flex-start);
